# handlers/handlers.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"github.com/caarlos0/env"
 	errors "github.com/go-openapi/errors"
 
 	models "github.com/xbcsmith/spoon/models"
@@ -80,7 +81,7 @@ func DeleteItem(id int64) error {
 	return nil
 }
 
-// allItems returns all the items
+// AllItems returns all the items
 func AllItems(since int64, limit int32) (results []*models.Item) {
 	results = make([]*models.Item, 0)
 	itemsLock.Lock()
@@ -96,10 +97,62 @@ func AllItems(since int64, limit int32) (results []*models.Item) {
 	return
 }
 
+// LivenessCheck returns true
+func LivenessCheck() (check *models.Liveness, err error) {
+	live := true
+	return &models.Liveness{Live: &live}, nil
+}
+
+// ReadinessCheck returns true
+func ReadinessCheck() (check *models.Readiness, err error) {
+	ready := true
+	return &models.Readiness{Ready: &ready}, nil
+}
+
+// SpoonDbCfg config for the database connections
+type SpoonDbCfg struct {
+	Host   string `env:"SPOON_DATABASE_HOSTNAME" envDefault:"0.0.0.0"`
+	Port   string `env:"SPOON_DATABASE_PORT" envDefault:"5432"`
+	User   string `env:"SPOON_DATABASE_USER" envDefault:"postgres"`
+	Passwd string `env:"SPOON_DATABASE_PASSWD" envDefault:"admin"`
+	Name   string `env:"SPOON_DATABASE_NAME" envDefault:"spoons"`
+}
+
+// GetCfg get the cfg from os.Environ
+func GetDbCfg() (*SpoonDbCfg, error) {
+	cfg := SpoonDbCfg{}
+	err := env.Parse(&cfg)
+	if err != nil {
+		return nil, errors.New(500, "Error reading db cfg from ENV")
+	}
+	return &cfg, nil
+}
+
+// SpoonCfg Cfg for app
+type SpoonCfg struct {
+	Url   string `env:"SPOON_URL" envDefault:"0.0.0.0"`
+	Token string `env:"SPOON_TOKEN" envDefault:"1234567890"`
+	Port  string `env:"SPOON_PORT" envDefault:"30570"`
+	State string `env:"SPOON_STATE" envDefault:"stateless"`
+}
+
+// GetCfg get the cfg from os.Environ
+func GetCfg() (*SpoonCfg, error) {
+	cfg := SpoonCfg{}
+	err := env.Parse(&cfg)
+	if err != nil {
+		return nil, errors.New(500, "Error reading cfg from ENV")
+	}
+	return &cfg, nil
+}
+
 func TokenAuth(token string) (*models.Principal, error) {
-	if token == "12345" {
-		prin := models.Principal(token)
-		return &prin, nil
+	cfg, err := GetCfg()
+	if err == nil {
+		if token == cfg.Token {
+			prin := models.Principal(token)
+			return &prin, nil
+		}
 	}
 	return nil, errors.New(401, "incorrect api key auth")
 }
