# models/liveness.go
@@ -1,0 +1,64 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Liveness liveness
+// swagger:model liveness
+type Liveness struct {
+
+	// live
+	// Required: true
+	Live *bool `json:"live"`
+}
+
+// Validate validates this liveness
+func (m *Liveness) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateLive(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Liveness) validateLive(formats strfmt.Registry) error {
+
+	if err := validate.Required("live", "body", m.Live); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Liveness) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Liveness) UnmarshalBinary(b []byte) error {
+	var res Liveness
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
