# models/readiness.go
@@ -1,0 +1,64 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Readiness readiness
+// swagger:model readiness
+type Readiness struct {
+
+	// ready
+	// Required: true
+	Ready *bool `json:"ready"`
+}
+
+// Validate validates this readiness
+func (m *Readiness) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateReady(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Readiness) validateReady(formats strfmt.Registry) error {
+
+	if err := validate.Required("ready", "body", m.Ready); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Readiness) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Readiness) UnmarshalBinary(b []byte) error {
+	var res Readiness
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
