# restapi/operations/healthz/get_readiness_responses.go
@@ -1,0 +1,204 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package healthz
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/xbcsmith/spoon/models"
+)
+
+// GetReadinessOKCode is the HTTP code returned for type GetReadinessOK
+const GetReadinessOKCode int = 200
+
+/*GetReadinessOK return the readiness of app
+
+swagger:response getReadinessOK
+*/
+type GetReadinessOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Readiness `json:"body,omitempty"`
+}
+
+// NewGetReadinessOK creates GetReadinessOK with default headers values
+func NewGetReadinessOK() *GetReadinessOK {
+
+	return &GetReadinessOK{}
+}
+
+// WithPayload adds the payload to the get readiness o k response
+func (o *GetReadinessOK) WithPayload(payload *models.Readiness) *GetReadinessOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get readiness o k response
+func (o *GetReadinessOK) SetPayload(payload *models.Readiness) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetReadinessOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetReadinessUnauthorizedCode is the HTTP code returned for type GetReadinessUnauthorized
+const GetReadinessUnauthorizedCode int = 401
+
+/*GetReadinessUnauthorized unauthorized
+
+swagger:response getReadinessUnauthorized
+*/
+type GetReadinessUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetReadinessUnauthorized creates GetReadinessUnauthorized with default headers values
+func NewGetReadinessUnauthorized() *GetReadinessUnauthorized {
+
+	return &GetReadinessUnauthorized{}
+}
+
+// WithPayload adds the payload to the get readiness unauthorized response
+func (o *GetReadinessUnauthorized) WithPayload(payload *models.Error) *GetReadinessUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get readiness unauthorized response
+func (o *GetReadinessUnauthorized) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetReadinessUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetReadinessNotFoundCode is the HTTP code returned for type GetReadinessNotFound
+const GetReadinessNotFoundCode int = 404
+
+/*GetReadinessNotFound resource not found
+
+swagger:response getReadinessNotFound
+*/
+type GetReadinessNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetReadinessNotFound creates GetReadinessNotFound with default headers values
+func NewGetReadinessNotFound() *GetReadinessNotFound {
+
+	return &GetReadinessNotFound{}
+}
+
+// WithPayload adds the payload to the get readiness not found response
+func (o *GetReadinessNotFound) WithPayload(payload *models.Error) *GetReadinessNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get readiness not found response
+func (o *GetReadinessNotFound) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetReadinessNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*GetReadinessDefault generic error response
+
+swagger:response getReadinessDefault
+*/
+type GetReadinessDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetReadinessDefault creates GetReadinessDefault with default headers values
+func NewGetReadinessDefault(code int) *GetReadinessDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetReadinessDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get readiness default response
+func (o *GetReadinessDefault) WithStatusCode(code int) *GetReadinessDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get readiness default response
+func (o *GetReadinessDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get readiness default response
+func (o *GetReadinessDefault) WithPayload(payload *models.Error) *GetReadinessDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get readiness default response
+func (o *GetReadinessDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetReadinessDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
