# swagger.yml
@@ -163,6 +163,50 @@ paths:
           description: error
           schema:
             $ref: "#/definitions/error"
+  /healthz/liveness:
+    get:
+      tags:
+        - healthz
+      operationId: get_liveness
+      responses:
+        200:
+          description: return the liveness of app
+          schema:
+            $ref: "#/definitions/liveness"
+        401:
+          description: unauthorized
+          schema:
+            $ref: "#/definitions/error"
+        404:
+          description: resource not found
+          schema:
+            $ref: "#/definitions/error"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"
+  /healthz/readiness:
+    get:
+      tags:
+        - healthz
+      operationId: get_readiness
+      responses:
+        200:
+          description: return the readiness of app
+          schema:
+            $ref: "#/definitions/readiness"
+        401:
+          description: unauthorized
+          schema:
+            $ref: "#/definitions/error"
+        404:
+          description: resource not found
+          schema:
+            $ref: "#/definitions/error"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"
 definitions:
   item:
     type: object
@@ -190,3 +234,17 @@ definitions:
         type: string
   principal:
     type: string
+  liveness:
+    type: object
+    required:
+      - live
+    properties:
+      live:
+        type: boolean
+  readiness:
+    type: object
+    required:
+      - ready
+    properties:
+      ready:
+        type: boolean
